--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "scripts": {
-    "async-await-demo1": "ts-node async-await-demo.ts",
-    "async-await-demo2": "ts-node -r trace -r clarify async-await-demo.ts",
-    "function-generator-demo": "ts-node function-generator-demo"
+    "demo": "node -r ts-node/register -r trace -r clarify --stack_trace_limit=5 async-await-demo.ts"
   },
   "devDependencies": {
     "@types/node": "10.12.18",
@@ -11,8 +9,6 @@
   },
   "dependencies": {
     "clarify": "2.1.0",
-    "co": "4.6.0",
-    "longjohn": "0.2.12",
     "trace": "3.1.1"
   }
 }
